--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practica</title>
-</head>
-<body>
-    <h1 class="text-blue-600 text-[5rem] text-center">Este es un titulo</h1>
+  </head>
+  <body>
+    <h1 class="text-blue-600 text-[5rem] text-center">
+      el software mas utilizada se llama hira
+    </h1>
+    <p class="text-[18px]">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem sint accusamus perferendis alias labore! Ipsam suscipit qui unde sint quisquam tenetur sequi obcaecati a, quos natus nobis rem rerum corrupti?
+    </p>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -14,11 +19,12 @@
         theme: {
           extend: {
             colors: {
-              clifford: '#da373d',
-            }
-          }
-        }
-      }
+              clifford: "#da373d",
+            },
+          },
+        },
+      };
     </script>
-</body>
+    <script src="./script.js"></script>
+  </body>
 </html>
